# COALA-GNN

./: README.md
COALA-GNN-Setup/: setup.py
COALA-GNN-Setup/COALA_GNN/: COALA_GNN_DataLoader.py  COALA_GNN_Manager.py  Shared_Tensor.py  Training_node_distributor.py  __init__.py
COALA_GNN_Modules/: CMakeLists.txt  COALA_GNN_Pybind.cu  cache_kernel.cu  graph_coloring.cpp  isolated_cache.h  node_distributor_pybind.cuh  nvshmem_cache.h  nvshmem_manager.cuh  seqlock.h  shared_UVA.cuh  ssd_gnn_cache.cuh
COALA_GNN_Modules/COALA_GNN_Pybind/: __init__.py  setup.py
GIDS_Setup/GIDS/: Dist_GIDS.py  Emul_GIDS.py  GIDS.py  __init__.py
SSD-GNN-Setup/GIDS/: Dist_GIDS.py  SSD_GNN.py
SSD-GNN-Setup/GIDS.egg-info/: SOURCES.txt  top_level.txt
SSD-GNN-Setup/Shared_Tensor/: SSD_GNN_DataLoader.py  SSD_GNN_Manager.py  Shared_Tensor.py  Training_node_distributor.py  __init__.py
evaluation/: GIDS_dataloader.py  dataloader.py  dist_heterogeneous_train.py  dist_homogenous_train.py  homogenous_train.py  models.py  page_rank_node_list_gen.py
examples/: 16GB_script.sh  4GB_script.sh  Cache_compare_script.sh  Distribution_compare_script.sh  create_csc_graph.py  dataloader.py  load_csc_graph.py  models.py  nvshmem_homogeneous_train.py  sbatch_ssd_gnn_train.py  shared_uva_train.py  ssd_gnn_dataloader.py
examples/color_info_gen/: dataloader.py  generate_color_data.py
gids_module/: CMakeLists.txt  emual_kernel.cu  gids_kernel.cu  gids_nvme.cu  graph_coloring.cpp  nvshmem_cache_kernel.cu  nvshmem_cache_meta.h
gids_module/Graph_Coloring/: __init__.py  setup.py
gids_module/include/: bam_nvme.h  emulate_set_associative_page_cache.h  graph_coloring.h  nvshmem_cache.h  set_associative_page_cache.h
gids_module2/: CMakeLists.txt  gids_nvme.cu  graph_coloring.cpp  nvshmem_cache.cu  nvshmem_cache_kernel.cu
gids_module2/Dist_Cache/: __init__.py  setup.py
gids_module2/include/: bam_nvme.h  graph_coloring.h  nvshmem_cache.h  nvshmem_cache_buffer.h  set_associative_page_cache.h
multi_node_example/: GIDS_dataloader.py  dataloader.py  hetero_batch_gen.py  homo_batch_gen.py
multi_node_example/custom_sampling/: custom_neighbor.py  custom_sampler.py  custom_test.py  dataloader.py  emulate_dist_gnn.py  sample_dist_gnn.py
shared_UVA_module/: CMakeLists.txt  SSD_GNN_Pybind.cu  cache_kernel.cu  node_distributor_pybind.cuh  nvshmem_cache.h  nvshmem_manager.cuh  seqlock.h  shared_UVA.cu  shared_UVA.cuh  ssd_gnn_cache.cuh
shared_UVA_module/SSD_GNN_Pybind/: __init__.py  setup.py
shared_UVA_module/install_module/: setup_backup.py
simulation_eval/: Dist_GIDS_Loader.py  Graph_Color.py  Graph_Color_dist_emulate.py  dataloader.py  extract.py  extract2.py  homogeneous_train_sim.py  models.py  mpi_test.py  mpi_test2.py  nvshmem_homogeneous_train.py  nvshmem_homogeneous_train_sim.py  nvshmem_homogeneous_train_sim2.py  nvshmem_homogeneous_train_sim_backup.py  nvshmem_sim_ogb_test.sh  nvshmem_sim_test.sh  nvshmem_sim_test_3.sh  page_rank_node_list_gen.py  run_experiments.py  run_experiments_medium.py  slurm-26620753.out  test.py  test.sh  test1.py
